--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@typescript-eslint/parser": "^5.60.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "eslint": "8.43.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "13.4.6",
@@ -38,5 +37,8 @@
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "prettier": "2.8.8"
   }
 }
